<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authorization_byPhoneNumber">

    <TextView
        android:id="@+id/enterToApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enterToApp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat"
        app:layout_constraintVertical_bias=".15"
        android:textColor="@color/textColor"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/number"
            android:textColor="@color/textColor"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/numberExample"
            app:boxStrokeColor="@color/textColor"
            android:layout_marginTop="8dp"
            app:hintTextColor="#7E7E7E"
            app:layout_constraintTop_toBottomOf="@+id/number"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColor"
                android:fontFamily="@font/montserrat"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:background="@drawable/rounded_button"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="29dp"
        android:fontFamily="@font/montserrat"
        android:onClick="onClick"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>